--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,6 +35,7 @@
     },
     "include": [
         "src/**/*",
-        "node_modules/notifme-sdk.d.ts"
+        "node_modules/notifme-sdk.d.ts",
+        "src/a.txt"
     ]
 }
