--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@types/node": "^12.0.2",
         "@types/request": "^2.48.1",
         "axios": "1.6.7",
+        "body-parser": "^1.20.2",
         "express": "^4.16.4",
         "js-yaml": "^3.13.1",
         "json-rules-engine": "^2.3.6",
