--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-BASE_URL="http://demo.devtron.info:32080"
-NATS_URL="localhost:3000"
+BASE_URL=http://demo.devtron.info:32080
+NATS_URL=nats://localhost:4222
+ACK_WAIT=9000000000
+REPLICAS=0
