--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
         "strict": true,
         "forceConsistentCasingInFileNames": true,
         "module": "commonjs",
+        "moduleResolution": "nodenext",
         "resolveJsonModule": true,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
@@ -16,7 +17,6 @@
         "strictNullChecks": false,
         "esModuleInterop": true,
         "target": "es6",
-        "moduleResolution": "node",
         "sourceMap": true,
         "outDir": "dist",
         "baseUrl": ".",
