--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "devDependencies": {
         "node-fetch": "^2.6.8",
         "nodemon": "^3.0.2",
-        "ts-node": "^10.7.0",
+        "ts-node": "^10.9.2",
         "tslint": "^5.16.0",
         "typescript": "^4.8.3"
     },
@@ -28,6 +28,7 @@
         "@types/node": "^12.0.2",
         "@types/request": "^2.48.1",
         "axios": "1.6.8",
+        "dotenv": "^16.4.5",
         "express": "^4.16.4",
         "js-yaml": "^3.13.1",
         "json-rules-engine": "^2.3.6",
