--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "axios": "1.6.8",
         "body-parser": "^1.20.2",
         "express": "^4.19.2",
+        "express-promise-router": "^4.1.1",
         "js-yaml": "^3.13.1",
         "json-rules-engine": "^2.3.6",
         "moment-timezone": "^0.5.31",
