--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
         "@types/express": "^4.16.1",
         "@types/mustache": "^0.8.32",
         "@types/node": "^12.0.2",
+        "@types/request": "^2.48.12",
         "axios": "1.6.8",
         "body-parser": "^1.20.2",
         "express": "^4.19.2",
+        "js-yaml": "^4.1.0",
         "json-rules-engine": "^2.3.6",
         "moment-timezone": "^0.5.31",
         "mustache": "^3.0.1",
