--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "json-rules-engine": "^2.3.6",
         "moment-timezone": "^0.5.31",
         "mustache": "^3.0.1",
+        "nats": "2.10.1",
         "notifme-sdk": "^1.14.1",
         "pg": "^8.2.1",
         "reflect-metadata": "^0.1.13",
