chore: add override for tar stream

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "overrides": {
         "node-gcm": {
             "axios": "1.7.7"
-        }
+        },
+        "tar-stream": "^3.0.0"
     }
 }
