--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "author": "devtron labs",
     "license": "UNLICENSED",
     "devDependencies": {
+        "@types/chai": "^5.2.1",
+        "@types/mocha": "^10.0.10",
+        "chai": "^5.2.0",
+        "mocha": "^11.1.0",
         "node-fetch": "^2.6.8",
         "nodemon": "^3.0.2",
         "ts-node": "^10.7.0",
