--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "version": "1.0.0",
     "description": "app for notification",
     "main": "dist/server.js",
+    "engines": {
+        "node": ">=18.0.0"
+    },
     "scripts": {
         "start": "ts-node src/server.ts",
         "dev": "nodemon src/server.ts",
@@ -29,7 +32,7 @@
     "dependencies": {
         "@types/express": "^4.17.21",
         "@types/mustache": "^0.8.32",
-        "@types/node": "^12.0.2",
+        "@types/node": "^18.0.0",
         "@types/request": "^2.48.1",
         "axios": "^1.7.7",
         "body-parser": "^1.20.3",
